--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,11 @@
 2014-04-21  Daiki Ueno  <ueno@gnu.org>
 
+	tests: Don't run system dependent test by default
+	* Makefile.am (TESTS): Move xgettext-c-1 to...
+	(EXTRA_DIST): ...here.
+
+2014-04-21  Daiki Ueno  <ueno@gnu.org>
+
 	* autopoint-1 (gettext_datadir): Rename from gettext_dir.
 	* autopoint-2 (gettext_datadir): Likewise.
 	* autopoint-3 (gettext_datadir): Likewise.
