--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2014-04-21  Daiki Ueno  <ueno@gnu.org>
+
+	msgfilter: Fix single quote handling in the quot filter
+	* filter-quote.c (convert_ascii_quote_to_unicode): Fix single
+	quote handling to accept multiple quotations in a string.
+
 2014-04-17  Daiki Ueno  <ueno@gnu.org>
 
 	xgettext: Strip multiple ".in" suffixes from the file name.
