--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2014-04-21  Daiki Ueno  <ueno@gnu.org>
+
+	* Rules-quot: Use built-in filter if possible.
+
 2014-04-02  Daiki Ueno  <ueno@gnu.org>
 
 	* Rules-quot: Add a license notice.
