--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,11 @@
+2014-04-21  Daiki Ueno  <ueno@gnu.org>
+
+	* Rules-quot: Use built-in filter if possible.
+
+2014-04-02  Daiki Ueno  <ueno@gnu.org>
+
+	* Rules-quot: Add a license notice.
+
 2013-07-04  Daiki Ueno  <ueno@gnu.org>
 
 	* bg.po: Update from Roumen Petrov <transl@roumenpetrov.info>.
