build: Use git-version-gen intead of version.sh
* version.sh: Remove.
* autogen.sh: Import git-version-gen from Gnulib.
* Makefile.am (EXTRA_DIST): Add $(top_srcdir)/.version.
(BUILT_SOURCES): Likewise.
($(top_srcdir)/.version): New rule.
(dist-hook): New rule.
* configure.ac: Use git-version-gen in AC_INIT.
* gettext-runtime/configure.ac: Likewise.
* gettext-tools/configure.ac: Likewise.
* gettext-tools/examples/configure.ac: Likewise.
* gettext-runtime/man/Makefile.am: Refer to .version instead of
version.sh.
* gettext-tools/doc/Makefile.am: Likewise.
* gettext-tools/man/Makefile.am: Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2014-04-22  Daiki Ueno  <ueno@gnu.org>
+
+	build: Use git-version-gen intead of version.sh
+	* version.sh: Remove.
+	* autogen.sh: Import git-version-gen from Gnulib.
+	* Makefile.am (EXTRA_DIST): Remove version.sh and add
+	$(top_srcdir)/.version.
+	(BUILT_SOURCES): Add $(top_srcdir)/.version.
+	($(top_srcdir)/.version): New rule.
+	(dist-hook): New rule.
+	* configure.ac: Use git-version-gen in AC_INIT.
+
 2014-04-21  Daiki Ueno  <ueno@gnu.org>
 
 	autogen.sh: Split the regeneration of data files into update.sh
