--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2014-04-22  Daiki Ueno  <ueno@gnu.org>
 
+	m4: Apply NM detection fix from Libtool
+	2013-04-28  Peter Rosin <peda@lysator.liu.se>
+		libtool: break all the way out when a good nm is found
+		* m4/libtool.m4 (LT_PATH_NM): Break all the way out on a good
+		match.
+
+2014-04-22  Daiki Ueno  <ueno@gnu.org>
+
 	m4: Revert commit d6690cc7 to libtool.m4
 	Reported by Benjamin Gilbert at:
 	<https://savannah.gnu.org/bugs/?41203>
