--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2014-04-29  Daiki Ueno  <ueno@gnu.org>
+
+	* autopoint-3 (gettext_datadir): Don't regenerate intl/plural.c.
+
 2014-04-21  Daiki Ueno  <ueno@gnu.org>
 
 	tests: Don't run system dependent test by default
