--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,10 @@
 2014-04-30  Daiki Ueno  <ueno@gnu.org>
 
+	* xgettext-scheme-4: New file.
+	* Makefile.am (TESTS): Add new test.
+
+2014-04-30  Daiki Ueno  <ueno@gnu.org>
+
 	format-python-brace: Limit acceptable format specifiers
 	* format-python-brace-1: Add tests for standard format specifiers.
 
