--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,5 +1,14 @@
 2014-05-01  Daiki Ueno  <ueno@gnu.org>
 
+	Makefile.in.in: Add an option to mark the package GNU/non-GNU
+	Reporeted by David Shea at:
+	<https://savannah.gnu.org/bugs/?40520>.
+	* Makevars (PACKAGE_GNU): New variable.
+	* Makefile.in.in ($(DOMAIN).pot-update): Don't search for "GNU
+	packagename" if $(PACKAGE_GNU) is set.
+
+2014-05-01  Daiki Ueno  <ueno@gnu.org>
+
 	Makefile.in.in: Make dependencies of a PO file and 'dist' customizable
 	* Makevars (POFILESDEPS): New variable.
 	(DISTFILESDEPS): New variable.
