--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-04  Jehan  <jehan@girinstud.io>  (tiny change)
+
+	configure: require automake >= 1.13
+	Macro AM_EXTRA_RECURSIVE_TARGETS defined in Automake 1.13.
+	* configure.ac (AM_INIT_AUTOMAKE): Require Automake 1.13 or later.
+
 2014-04-22  Daiki Ueno  <ueno@gnu.org>
 
 	m4: Apply NM detection fix from Libtool
