--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,24 @@
 2014-05-09  Daiki Ueno  <ueno@gnu.org>
 
+	c: Interpret string literals lazily
+	* x-c.c (P7_EOF, P7_STRING_END, P7_QUOTES, P7_QUOTE, P7_NEWLINE)
+	(UNICODE, IS_UNICODE, UNICODE_VALUE): Remove.
+	(phase7_get): Remove.
+	(phase7_ungetc): Remove.
+	(phase5_get): Use 'phase3_get' directly to extract string
+	literals; use 'arglist_parser_remember_literal' instead of
+	'arglist_parser_remember'.
+	(literalstring_parse): New function.
+	(literalstring_c): New variable.
+	(extract_parenthesized): Remove the
+	'xgettext_current_source_encoding' setting to prevent encoding
+	conversion around 'arglist_parser_done'.
+	* x-c.h (SCANNERS_C): Register 'literalstring_c' as a
+	literalstring_parser.
+	(literalstring_c): New variable declaration.
+
+2014-05-09  Daiki Ueno  <ueno@gnu.org>
+
 	xgettext: Provide a way to interpret string literals lazily
 	* xgettext.c (extract_ty): New field 'literalstring_parser'.
 	(current_literalstring_parser): New variable.
