--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-11  Daiki Ueno  <ueno@gnu.org>
+
+	* xsize.c (_GL_UNUSED): Define, if undefined.
+
 2014-04-30  Steve Ellcey  <sellcey@mips.com>  (tiny change)
 
 	* loadmsgcat.c (PRI_MACROS_BROKEN) [_LIBC]: Define to 0, if
