msgfilter: Fix quote handling of doubled grave charaters
* filter-quote.c (convert_ascii_quote_to_unicode): Fix handling of
doubled grave characters.

--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-12  Daiki Ueno  <ueno@gnu.org>
+
+	* msgfilter-quote-1: Test doubled grave characters.
+
 2014-05-10  Guido Flohr  <guido@imperia.net>
 
 	msgattrib: Add --empty option to clear msgstr
