--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,11 @@
 2014-05-12  Daiki Ueno  <ueno@gnu.org>
 
+	msgfilter: Fix quote handling of doubled grave charaters
+	* filter-quote.c (convert_ascii_quote_to_unicode): Fix handling of
+	doubled grave characters.
+
+2014-05-12  Daiki Ueno  <ueno@gnu.org>
+
 	* msgfmt.c (add_languages): New function split from get_languages.
 	(get_languages): Use add_languages instead of manually parsing
 	LINGUAS envvar with strtok_r.
