--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-13  Daiki Ueno  <ueno@gnu.org>
+
+	* msgfmt-10: Increment expected error count.
+
 2014-05-12  Daiki Ueno  <ueno@gnu.org>
 
 	* msgfilter-quote-1: Test doubled grave characters.
