--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-14  Daiki Ueno  <ueno@gnu.org>
+
+	Update after gnulib changed.
+	* modules/regex.diff: Remove.  modules/regex no longer depends on
+	malloc-gnu thus this patch is not needed anymore.
+
 2014-04-07  Daiki Ueno  <ueno@gnu.org>
 
 	Update after gnulib changed.
