tests: Don't assume ga_IE locale is present
* msginit-3: Fix charset value after msginit invocation.

--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-15  Daiki Ueno  <ueno@gnu.org>
+
+	* msginit-3: Fix charset value after msginit invocation.
+
 2014-05-14  Daiki Ueno  <ueno@gnu.org>
 
 	tests: Fix errors when CFLAGS contains --coverage
