--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-15  Stanislav Brabec  <sbrabec@suse.cz>  (tiny change)
+
+	msgexec: Implement plural support
+	* msgexec.c (process_string): Set or unset MSGEXEC_MSGID_PLURAL.
+	(process_message): Set or unset MSGEXEC_PLURAL_FORM.
+
 2014-05-14  Daiki Ueno  <ueno@gnu.org>
 
 	msgfmt: Report error on accelerator mismatch
