--- a/NEWS
+++ b/NEWS
@@ -36,8 +36,12 @@ Version 0.19 - unreleased
 * msgfmt now has --source option to keep generated .java file when
   running in Java mode.
 
-* msgattrib now has --empty option that sets msgstr to empty instead
-  of removing the entire entry when clearing fuzzy.
+* msgattrib now has --empty option that sets msgstr to empty when
+  clearing fuzzy flag.
+
+* msgexec and msgfilter pass the plural information to subprocess
+  through the environment variable MSG{EXEC,FILTER}_MSGID_PLURAL and
+  MSG{EXEC,FILTER}_PLURAL_FORM.
 
 * New built-in filters 'quot' and 'boldquot' have been added to
   msgfilter.  These filters convert Latin quotation marks ('...',
